# nova-dpm

./: .coveragerc  .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  docs-requirements.txt  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test  test-requirements.txt  tox.ini  upper-constraints.txt
.ssh/: id_rsa  id_rsa.pub
devstack/: README.rst  dpm-functions.sh  local.conf.compute  local.conf.singlenode.nova_neutron  local.conf.singlenode.nova_neutron_storage  override-defaults  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  configuration.rst  contributing.rst  crypto.rst  devref.rst  getting_started.rst  guest_image_tools.rst  history.rst  image.rst  index.rst  installation.rst  sample_config.rst  storage.rst  support-matrix.ini  support-matrix.rst  topology.rst  usage.rst
doc/source/image/: cloud-cfg  (+5 more)
elements/dpm/: README.rst  element-deps  package-installs.yaml
elements/nova-dpm-guest-image/: README.rst  element-deps  package-installs.yaml
etc/nova/: nova-dpm-config-generator.conf
nova_dpm/: __init__.py  version.py
nova_dpm/compute/: hv_type.py
nova_dpm/conf/: __init__.py  cfg.py  dpm.py  types.py
nova_dpm/tests/: __init__.py  base.py  test_nova_dpm.py
releasenotes/notes/: config-max_instances-default-value-7e530d2ae32c4c44.yaml  config-max_instances-removed-7fb30507f0348427.yaml  config-max_memory-minimum-value-e7723c907ad4f029.yaml  config-reserved_host_memory_mb-value-75ccb393c504ce85.yaml  first-release-742532c636f12dca.yaml
tools/: subunit-trace.py  tox_install.sh
(+76 files in other folders)
