[metadata]
name = nova-dpm
summary = OpenStack Nova virt-driver for IBM z Systems PR/SM hypervisor in DPM mode
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    nova_dpm
    nova/virt/dpm

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = nova_dpm/locale
domain = nova_dpm

[update_catalog]
domain = nova_dpm
output_dir = nova_dpm/locale
input_file = nova_dpm/locale/nova_dpm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nova_dpm/locale/nova_dpm.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
oslo.config.opts =
    nova_dpm = nova_dpm.conf.dpm:list_opts
